--- a/tp-webform-equipo-a1/tp-webform-equipo-a1/tp-webform-equipo-a1.csproj
+++ b/tp-webform-equipo-a1/tp-webform-equipo-a1/tp-webform-equipo-a1.csproj
@@ -71,6 +71,7 @@
     <Content Include="Index.aspx" />
     <Content Include="scripts\scripts.js" />
     <Content Include="Web.config" />
+    <Content Include="Carrito.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Index.aspx.cs">
@@ -87,6 +88,13 @@
     </Compile>
     <Compile Include="Master.Master.designer.cs">
       <DependentUpon>Master.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Carrito.aspx.cs">
+      <DependentUpon>Carrito.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Carrito.aspx.designer.cs">
+      <DependentUpon>Carrito.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
