Agrego contador de articulos en el carrito
Agrego un label en la pagina master que muestra cuantos articulos diferentes hay en el carrito

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/tp-webform-equipo-a1/.vs
+/tp-webform-equipo-a1/tp-webform-equipo-a1/obj
+/tp-webform-equipo-a1/tp-webform-equipo-a1/bin
